--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,21 +5,34 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFF"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.fyp.mrisecondscreen.MainActivity">
 
+    <TextView
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/intro"
+        android:text="Tap MIC Icon to start sync"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:textColor="#333"
+        android:layout_marginBottom="100dp" />
+
     <ImageButton
-        android:layout_height="100dp"
-        app:srcCompat="@drawable/mic"
+        android:layout_height="200dp"
+        android:src="@drawable/mic"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:id="@+id/mic"
-        android:layout_width="100dp"
+        android:layout_width="200dp"
         android:scaleType="centerCrop"
-        android:background="@android:color/background_light" />
+        android:background="#FFF" />
 
     <TextView
 
