created activity for displaying saved Offers

--- a/app/src/main/res/layout/banner_layout.xml
+++ b/app/src/main/res/layout/banner_layout.xml
@@ -47,7 +47,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:padding="20dp"
-            android:text="Redeem Offer!"
+            android:text="Redeem Now"
             android:background="@color/colorPrimaryDark"
             android:textColor="#FFF"
             android:layout_below="@id/banner_text"
@@ -58,7 +58,7 @@
             android:layout_weight="1"
             android:layout_width="0dp"
             android:padding="20dp"
-            android:text="Cancel"
+            android:text="Redeem Later"
             android:background="#333"
             android:textColor="#fff"
             android:layout_below="@id/banner_text"
