--- a/app/src/main/res/layout/activity_offers.xml
+++ b/app/src/main/res/layout/activity_offers.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.fyp.mrisecondscreen.OffersActivity">
+    tools:context="com.fyp.mrisecondscreen.activity.OffersActivity">
 
     <ListView
         android:layout_width="match_parent"
