- saved offers can be deleted now. - upgraded DB. - added CAB

--- a/app/src/main/res/menu/offer_action_menu.xml
+++ b/app/src/main/res/menu/offer_action_menu.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/offer_cancel"
+        android:icon="@drawable/ic_cancel_black_24dp"
+        android:title="cancel"
+        app:showAsAction="always"/>
+    <item android:id="@+id/offer_delete"
+        android:icon="@drawable/ic_delete_black_24dp"
+        android:title="delete"
+        app:showAsAction="always"/>
 </menu>
