--- a/app/src/main/res/layout/activity_offer_detail.xml
+++ b/app/src/main/res/layout/activity_offer_detail.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_offer_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
 
     tools:context="com.fyp.mrisecondscreen.activity.OfferDetail">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/detail_frame">
+        android:id="@+id/detail_frame"
+        android:layout_weight="1">
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:padding="10dp"
-            app:srcCompat="@drawable/com_facebook_tooltip_black_background"
-            android:id="@+id/detail_image"
+            android:id="@+id/detail_offer_image"
 
             android:layout_gravity="center"/>
 
@@ -28,7 +29,7 @@
         android:text="Cocacola Rs 1000 Credit Offer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/detail_title"
+        android:id="@+id/detail_offer_title"
         android:textAlignment="center"
         android:textColor="#FFF"
         android:layout_below="@id/detail_frame"
@@ -37,6 +38,7 @@
         android:paddingBottom="15dp"
         android:textAllCaps="true"
         android:textStyle="bold"
+        android:layout_gravity="center_vertical"
         android:textSize="20sp"/>
 
     <TextView
@@ -47,17 +49,17 @@
         android:text="Congratulations! you have won Rs 1000 Credit from CocaCola company"
         android:textColor="#6e6e6e"
         android:textAlignment="center"
+        android:layout_weight="1"
         android:padding="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:lineSpacingExtra="3dp"
         android:textSize="22sp"
         android:gravity="center"
-
         android:paddingTop="20dp"
         android:paddingBottom="20dp"
-        android:layout_below="@id/detail_title"
-        android:id="@+id/detail_offer_detail"/>
+        android:layout_below="@id/detail_offer_title"
+        android:id="@+id/detail_offer_content"/>
 
 
-</RelativeLayout>
+</LinearLayout>
