--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -61,7 +61,7 @@
     <LinearLayout android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/linearLayout"
-        android:orientation="horizontal"></LinearLayout>
+        android:orientation="horizontal"/>
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/login_button_FB"
