--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -27,13 +27,12 @@
                     android:layout_marginLeft="25dp"
                     android:textSize="18sp"
                     android:textStyle="bold"
-
                     android:layout_gravity="center_horizontal|center_vertical"/>
 
             </LinearLayout>
 
-
-            <LinearLayout android:layout_width="fill_parent"
+            <LinearLayout
+                android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
@@ -41,17 +40,18 @@
                 android:layout_marginBottom="30dp"
                 android:orientation="vertical"
                 android:gravity="center_horizontal"
-                android:background="@drawable/greybackground"
-                >
+                android:background="@drawable/greybackground">
 
-                <ImageView android:layout_width="120dp"
+                <ImageView
+                    android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:background="@drawable/logo"
                     android:layout_marginTop="15dp"
                     android:layout_gravity="center_horizontal"
                     android:contentDescription="Application Logo" />
 
-                <EditText android:layout_width="fill_parent"
+                <EditText
+                    android:layout_width="fill_parent"
                     android:layout_height="40dp"
                     android:hint="Username"
                     android:background="#f3f3f3"
@@ -60,9 +60,10 @@
                     android:id="@+id/login_username"
                     android:singleLine="true" />
 
-                <EditText android:layout_width="fill_parent"
+                <EditText
+                    android:layout_width="fill_parent"
                     android:layout_height="40dp"
-                    android:hint="password"
+                    android:hint="Password"
                     android:background="#f3f3f3"
                     android:paddingLeft="5dp"
                     android:layout_marginTop="15dp"
@@ -70,14 +71,12 @@
                     android:singleLine="true"
                     android:inputType="textPassword" />
 
-
                 <LinearLayout
                     android:layout_marginTop="10dp"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:gravity="center_horizontal"
-                    >
+                    android:gravity="center_horizontal">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -86,12 +85,12 @@
                         android:textColor="#000000"
                         android:text="Register Here"
                         android:textStyle="bold"
-                        android:id="@+id/login_register"
-                        />
-
+                        android:id="@+id/login_register" />
 
                 </LinearLayout>
-                <Button android:layout_width="190dp"
+
+                <Button
+                    android:layout_width="190dp"
                     android:layout_height="38dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="16dp"
@@ -113,16 +112,13 @@
                     android:textColor="#fff"
                     android:background="#2683c2"
                     android:paddingTop="11dp"
-                    android:paddingBottom="11dp"
-                    />
+                    android:paddingBottom="11dp" />
 
             </LinearLayout>
 
-
-
         </LinearLayout>
-
-
 
     </ScrollView>
 
+    <!-- Special thanks and credits to Android Arena (www.androidarena.co.in)
+           for the basic UI design and for making our life easier -->
