--- a/app/src/main/res/layout/activity_starting.xml
+++ b/app/src/main/res/layout/activity_starting.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:theme="@android:style/Theme.NoDisplay"
     tools:context="com.fyp.mrisecondscreen.activity.StartingActivity"
-    android:background="@color/colorPrimary">
+    android:background="#e4e2e2">
 
     <LinearLayout
         android:layout_width="match_parent"
