--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,77 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:id="@+id/drawer_layout"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:fitsSystemWindows="true"
+tools:openDrawer="start">
+
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <ImageButton
+            android:layout_height="200dp"
+            android:src="@drawable/mic"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/mic"
+            android:layout_width="200dp"
+            android:scaleType="centerCrop"
+            android:background="#FFF" />
+
+        <TextView
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/recordText"
+            android:text="RECORDING"
+            android:visibility="gone"
+            android:layout_above="@+id/mic"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="100dp" />
+
+        <ProgressBar
+            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/recordText"
+            android:layout_alignEnd="@+id/recordText"
+            android:id="@+id/progressBar"
+            android:visibility="gone"
+            />
+
+    </RelativeLayout>
+
+<include
+    layout="@layout/app_bar_main"
     android:layout_width="match_parent"
+    android:layout_height="match_parent" />
+
+
+<android.support.design.widget.NavigationView
+    android:id="@+id/nav_view"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:background="#FFF"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.fyp.mrisecondscreen.activity.MainActivity">
+    android:layout_gravity="start"
+    android:fitsSystemWindows="true"
+    app:headerLayout="@layout/nav_header_main"
+    app:menu="@menu/activity_main_drawer" />
 
-    <TextView
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/intro"
-        android:text="Tap MIC Icon to start sync"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:textColor="#333"
-        android:layout_marginBottom="100dp" />
-
-    <ImageButton
-        android:layout_height="200dp"
-        android:src="@drawable/mic"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/mic"
-        android:layout_width="200dp"
-        android:scaleType="centerCrop"
-        android:background="#FFF" />
-
-    <TextView
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/recordText"
-        android:text="RECORDING"
-        android:visibility="gone"
-        android:layout_above="@+id/mic"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="100dp" />
-
-    <ProgressBar
-        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/recordText"
-        android:layout_alignEnd="@+id/recordText"
-        android:id="@+id/progressBar"
-        android:visibility="gone"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Name"
-        android:id="@+id/main_name"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Email"
-        android:id="@+id/main_email"
-        android:layout_marginTop="9dp"
-        android:layout_below="@+id/main_name"
-        android:layout_alignParentStart="true" />
-
-</RelativeLayout>
+</android.support.v4.widget.DrawerLayout>
