--- a/app/src/main/res/menu/offer_action_menu.xml
+++ b/app/src/main/res/menu/offer_action_menu.xml
@@ -6,7 +6,7 @@
         android:title="cancel"
         app:showAsAction="always"/>
     <item android:id="@+id/offer_delete"
-        android:icon="@drawable/ic_delete_black_24dp"
+        android:icon="@drawable/ic_menu_send"
         android:title="delete"
         app:showAsAction="always"/>
 </menu>
