--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,42 +9,58 @@ android:fitsSystemWindows="true"
 tools:openDrawer="start">
 
     <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:id="@+id/content_frame">
 
-        <ImageButton
-            android:layout_height="200dp"
-            android:src="@drawable/mic"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:id="@+id/mic"
-            android:layout_width="200dp"
-            android:scaleType="centerCrop"
-            android:background="#FFF" />
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:id="@+id/mic_relative_layout"
+            tools:context=".activity.MicActivity">
 
-        <TextView
+            <ImageButton
+                android:layout_height="200dp"
+                android:src="@drawable/mic"
+                android:id="@+id/mic"
+                android:layout_width="200dp"
+                android:scaleType="centerCrop"
+                android:background="#FFF"
+                android:layout_marginLeft="70dp"
+                android:layout_alignParentBottom="true"/>
 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/recordText"
-            android:text="RECORDING"
-            android:visibility="gone"
-            android:layout_above="@+id/mic"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="100dp" />
+            <TextView
 
-        <ProgressBar
-            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/recordText"
-            android:layout_alignEnd="@+id/recordText"
-            android:id="@+id/progressBar"
-            android:visibility="gone"
-            />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/recordText"
+                android:text="RECORDING"
+                android:visibility="gone"
+                android:layout_above="@+id/mic"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="100dp" />
+
+            <ProgressBar
+                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/recordText"
+                android:layout_alignEnd="@+id/recordText"
+                android:id="@+id/progressBar"
+                android:visibility="gone"
+                />
+
+        </RelativeLayout>
 
     </RelativeLayout>
+
 
 <include
     layout="@layout/app_bar_main"
