--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,7 +16,7 @@
             android:icon="@drawable/ic_check_circle_black_18px"
             android:title="Coupons Redeemed" />
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/nav_profile"
             android:icon="@drawable/ic_account_circle_black_18px"
             android:title="Profile" />
     </group>
