--- a/app/src/main/res/layout/activity_view_profile.xml
+++ b/app/src/main/res/layout/activity_view_profile.xml
@@ -19,7 +19,7 @@ tools:openDrawer="start">
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#5fb0c9"
+            android:background="@color/lightgrey"
             android:orientation="vertical"
             android:scrollbarAlwaysDrawVerticalTrack="true">
 
@@ -186,10 +186,10 @@ tools:openDrawer="start">
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="22dp"
-                        android:background="#d67601"
                         android:text="Update"
                         android:textAllCaps="false"
                         android:textColor="#fff"
+                        android:background="@drawable/btn"
                         android:textSize="18sp" />
                 </LinearLayout>
 
