--- a/app/src/main/res/layout/activity_view_profile.xml
+++ b/app/src/main/res/layout/activity_view_profile.xml
@@ -63,7 +63,8 @@ tools:openDrawer="start">
                             android:layout_height="wrap_content"
                             android:drawableTint="#FF4081"
                             android:singleLine="true"
-                            android:hint="Full Name"/>
+                            android:hint="Full Name"
+                            android:inputType="textCapWords"/>
                     </android.support.design.widget.TextInputLayout>
 
                     <android.support.design.widget.TextInputLayout
@@ -77,7 +78,8 @@ tools:openDrawer="start">
                             android:layout_height="wrap_content"
                             android:singleLine="true"
                             android:drawableTint="#FF4081"
-                            android:hint="Email" />
+                            android:hint="Email"
+                            android:inputType="textEmailAddress"/>
                     </android.support.design.widget.TextInputLayout>
 
                     <android.support.design.widget.TextInputLayout
@@ -120,7 +122,8 @@ tools:openDrawer="start">
                             android:layout_height="wrap_content"
                             android:singleLine="true"
                             android:drawableTint="#FF4081"
-                            android:hint="Gender" />
+                            android:hint="Gender"
+                            android:inputType="textCapWords"/>
                     </android.support.design.widget.TextInputLayout>
 
                     <android.support.design.widget.TextInputLayout
@@ -134,7 +137,8 @@ tools:openDrawer="start">
                             android:layout_height="wrap_content"
                             android:singleLine="true"
                             android:drawableTint="#FF4081"
-                            android:hint="Relationship Status" />
+                            android:hint="Relationship Status"
+                            android:inputType="textCapWords"/>
                     </android.support.design.widget.TextInputLayout>
 
                     <android.support.design.widget.TextInputLayout
@@ -162,7 +166,38 @@ tools:openDrawer="start">
                             android:layout_height="wrap_content"
                             android:singleLine="true"
                             android:drawableTint="#FF4081"
-                            android:hint="Full Address" />
+                            android:hint="Full Address"
+                            android:inputType="textCapWords"/>
+                    </android.support.design.widget.TextInputLayout>
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="18dp">
+
+                        <EditText
+                            android:id="@+id/city"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:singleLine="true"
+                            android:drawableTint="#FF4081"
+                            android:hint="City"
+                            android:inputType="textCapWords"/>
+                    </android.support.design.widget.TextInputLayout>
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="18dp">
+
+                        <EditText
+                            android:id="@+id/country"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:singleLine="true"
+                            android:drawableTint="#FF4081"
+                            android:hint="Country"
+                            android:inputType="textCapWords"/>
                     </android.support.design.widget.TextInputLayout>
 
                     <android.support.design.widget.TextInputLayout
