--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinatorLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".activity.LoginActivity">
+
+
     <ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/scrollView1"
         android:layout_width="fill_parent"
-        android:layout_height="match_parent"
-        tools:context=".activity.LoginActivity">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:background="#e8e8e7"
             android:orientation="vertical" >
 
@@ -17,8 +25,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="48dp"
                 android:background="#13b586"
-                android:orientation="horizontal"
-                android:layout_alignParentTop="true">
+                android:orientation="horizontal">
 
                 <TextView android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -119,6 +126,9 @@
         </LinearLayout>
 
     </ScrollView>
+
+
+</android.support.design.widget.CoordinatorLayout>
 
     <!-- Special thanks and credits to Android Arena (www.androidarena.co.in)
            for the basic UI design and for making our life easier -->
