--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinatorLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".activity.RegisterActivity">
+
+    <ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/scrollView1"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        tools:context=".activity.RegisterActivity">
+        android:layout_height="fill_parent">
         <LinearLayout
 
             android:layout_width="fill_parent"
@@ -41,127 +48,130 @@
                 android:orientation="vertical"
                 android:background="@drawable/greybackground">
 
-                    <ImageView
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:background="@drawable/logo"
-                        android:layout_marginTop="0dp"
-                        android:layout_gravity="center_horizontal"/>
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:background="@drawable/logo"
+                    android:layout_marginTop="0dp"
+                    android:layout_gravity="center_horizontal"/>
 
-                    <EditText
-                        android:layout_width="fill_parent"
-                        android:layout_height="40dp"
-                        android:hint="Name"
-                        android:background="#f3f3f3"
-                        android:paddingLeft="5dp"
-                        android:layout_marginTop="30dp"
-                        android:id="@+id/register_name"
-                        android:singleLine="true"
-                        android:inputType="textCapWords" />
+                <EditText
+                    android:layout_width="fill_parent"
+                    android:layout_height="40dp"
+                    android:hint="Name"
+                    android:background="#f3f3f3"
+                    android:paddingLeft="5dp"
+                    android:layout_marginTop="30dp"
+                    android:id="@+id/register_name"
+                    android:singleLine="true"
+                    android:inputType="textCapWords" />
 
-                    <EditText
-                        android:layout_width="fill_parent"
-                        android:layout_height="40dp"
-                        android:hint="Username"
-                        android:background="#f3f3f3"
-                        android:paddingLeft="5dp"
-                        android:layout_marginTop="15dp"
-                        android:id="@+id/register_username"
-                        android:singleLine="true" />
+                <EditText
+                    android:layout_width="fill_parent"
+                    android:layout_height="40dp"
+                    android:hint="Username"
+                    android:background="#f3f3f3"
+                    android:paddingLeft="5dp"
+                    android:layout_marginTop="15dp"
+                    android:id="@+id/register_username"
+                    android:singleLine="true" />
 
-                    <EditText
-                        android:layout_width="fill_parent"
-                        android:layout_height="40dp"
-                        android:hint="Birthday (MM/DD/YYYY)"
-                        android:background="#f3f3f3"
-                        android:paddingLeft="5dp"
-                        android:layout_marginTop="15dp"
-                        android:id="@+id/register_age"
-                        android:singleLine="true"
-                        android:maxLength="10"
-                        android:inputType="date" />
+                <EditText
+                    android:layout_width="fill_parent"
+                    android:layout_height="40dp"
+                    android:hint="Birthday (MM/DD/YYYY)"
+                    android:background="#f3f3f3"
+                    android:paddingLeft="5dp"
+                    android:layout_marginTop="15dp"
+                    android:id="@+id/register_age"
+                    android:singleLine="true"
+                    android:maxLength="10"
+                    android:inputType="date" />
 
-                    <EditText
-                        android:layout_width="fill_parent"
-                        android:layout_height="40dp"
-                        android:hint="Email Address"
-                        android:background="#f3f3f3"
-                        android:paddingLeft="5dp"
-                        android:layout_marginTop="15dp"
-                        android:id="@+id/register_email"
-                        android:singleLine="true"
-                        android:inputType="textEmailAddress" />
+                <EditText
+                    android:layout_width="fill_parent"
+                    android:layout_height="40dp"
+                    android:hint="Email Address"
+                    android:background="#f3f3f3"
+                    android:paddingLeft="5dp"
+                    android:layout_marginTop="15dp"
+                    android:id="@+id/register_email"
+                    android:singleLine="true"
+                    android:inputType="textEmailAddress" />
 
-                    <EditText
-                        android:layout_width="fill_parent"
-                        android:layout_height="40dp"
-                        android:hint="Password"
-                        android:background="#f3f3f3"
-                        android:paddingLeft="5dp"
-                        android:layout_marginTop="15dp"
-                        android:id="@+id/register_password"
-                        android:singleLine="true"
-                        android:inputType="textPassword" />
+                <EditText
+                    android:layout_width="fill_parent"
+                    android:layout_height="40dp"
+                    android:hint="Password"
+                    android:background="#f3f3f3"
+                    android:paddingLeft="5dp"
+                    android:layout_marginTop="15dp"
+                    android:id="@+id/register_password"
+                    android:singleLine="true"
+                    android:inputType="textPassword" />
 
-                    <RelativeLayout
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp">
+
+                    <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp">
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:text="Gender"
+                        android:layout_marginLeft="4dp"
+                        android:layout_marginTop="3dp"
+                        android:id="@+id/textView"
+                        android:layout_alignTop="@+id/register_male"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true" />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textAppearance="?android:attr/textAppearanceMedium"
-                            android:text="Gender"
-                            android:layout_marginLeft="4dp"
-                            android:layout_marginTop="3dp"
-                            android:id="@+id/textView"
-                            android:layout_alignTop="@+id/register_male"
-                            android:layout_alignParentLeft="true"
-                            android:layout_alignParentStart="true" />
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Male"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginLeft="94dp"
+                        android:layout_marginStart="94dp"
+                        android:checked="false"
+                        android:id="@+id/register_male"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true" />
 
-                        <RadioButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Male"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginLeft="94dp"
-                            android:layout_marginStart="94dp"
-                            android:checked="false"
-                            android:id="@+id/register_male"
-                            android:layout_alignParentLeft="true"
-                            android:layout_alignParentStart="true" />
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Female"
 
-                        <RadioButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Female"
+                        android:layout_marginLeft="38dp"
+                        android:layout_marginStart="38dp"
+                        android:checked="false"
+                        android:id="@+id/register_female"
+                        android:layout_alignTop="@+id/register_male"
+                        android:layout_toRightOf="@+id/register_male"
+                        android:layout_toEndOf="@+id/register_male" />
 
-                            android:layout_marginLeft="38dp"
-                            android:layout_marginStart="38dp"
-                            android:checked="false"
-                            android:id="@+id/register_female"
-                            android:layout_alignTop="@+id/register_male"
-                            android:layout_toRightOf="@+id/register_male"
-                            android:layout_toEndOf="@+id/register_male" />
+                </RelativeLayout>
 
-                    </RelativeLayout>
-
-                    <Button
-                        android:layout_width="190dp"
-                        android:layout_height="38dp"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="16dp"
-                        android:text="submit"
-                        android:textColor="#fff"
-                        android:background="@drawable/btn"
-                        android:id="@+id/register_button"/>
+                <Button
+                    android:layout_width="190dp"
+                    android:layout_height="38dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="16dp"
+                    android:text="submit"
+                    android:textColor="#fff"
+                    android:background="@drawable/btn"
+                    android:id="@+id/register_button"/>
 
             </LinearLayout>
 
         </LinearLayout>
 
     </ScrollView>
+
+
+</android.support.design.widget.CoordinatorLayout>
 
     <!-- Special thanks and credits to Android Arena (www.androidarena.co.in)
                for the basic UI design and for making our life easier -->
