--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,9 +33,9 @@
                 android:id="@+id/mic"
                 android:layout_width="200dp"
                 android:scaleType="centerCrop"
-                android:background="#FFF"
                 android:layout_marginLeft="70dp"
-                android:layout_alignParentBottom="true"/>
+                android:layout_alignParentBottom="true"
+                android:background="@null"/>
 
             <TextView
 
