fixed vector issue for older APIs by adding appsrc attributes

--- a/app/src/main/res/layout/activity_view_profile.xml
+++ b/app/src/main/res/layout/activity_view_profile.xml
@@ -239,7 +239,7 @@ tools:openDrawer="start">
                 android:layout_marginTop="16dp"
                 android:background="@drawable/user_profile_image_background"
                 android:elevation="4dp"
-                android:src="@drawable/profileview_icon" />
+                app:srcCompat="@drawable/profileview_icon" />
         </RelativeLayout>
 
     </ScrollView>
