--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
 
             <ImageButton
                 android:layout_height="200dp"
-                android:src="@drawable/mic"
+                android:src="@drawable/scan2"
                 android:id="@+id/mic"
                 android:layout_width="200dp"
                 android:scaleType="centerCrop"
