--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="white">#FFFFFF</color>
     <color name="lightgrey">#e4e2e2</color>
     <color name="black">#000000</color>
+    <color name="grey">#bfbfbf</color>
 </resources>
