--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -51,7 +51,7 @@
                 <ImageView
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:background="@drawable/logo"
+                    android:background="@drawable/media_icon"
                     android:layout_marginTop="0dp"
                     android:layout_gravity="center_horizontal"/>
 
