--- a/app/src/main/res/layout/activity_starting.xml
+++ b/app/src/main/res/layout/activity_starting.xml
@@ -14,7 +14,7 @@
         android:gravity="center">
 
         <ImageView
-            android:src="@drawable/logo"
+            android:src="@drawable/media_icon_t"
             android:layout_gravity="center"
             android:layout_width="300dp"
             android:layout_height="300dp"
